# Weaver

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: main.py
src/browser/: client.py  dataclasses.py  exc.py  override.py
src/browser/dom/: config.py  constants.py  dataclasses.py  scroll.py  setup.py
src/common/: utils.py
src/config/: logging.py
src/http/: client.py  dataclasses.py  exc.py
src/spiders/: base_spider.py  exc.py  headers.py
src/spiders/jobbank/: spider.py
weaver/: __init__.py
weaver/browser/: client.py  constants.py  dataclasses.py  exc.py  override.py
weaver/browser/dom/: constants.py
weaver/common/: exc.py  utils.py
weaver/http/: client.py  dataclasses.py  exc.py
weaver/proxy/: dataclasses.py  endpoint_handler.py  exc.py  manager.py
weaver/proxy/web_share/: client.py  config.py
weaver/spider/: base_spider.py  dataclasses.py  exc.py  runner.py  types.py
weaver/spiders/: base_spider.py  builder.py
